fix: JAX 0.7+ API compatibility, 64x64 image size, nes_py NumPy 2.0 patch

--- a/train_battlecity_dreamer.ipynb
+++ b/train_battlecity_dreamer.ipynb
@@ -10,227 +10,178 @@
             "name": "python3",
             "display_name": "Python 3"
         },
-        "language_info": {
-            "name": "python"
-        },
         "accelerator": "GPU"
     },
     "cells": [
         {
             "cell_type": "markdown",
             "source": [
-                "# 🎮 Battle City + DreamerV3 Training\n",
+                "# 🎮 Battle City + DreamerV3\n",
                 "\n",
-                "Train a world-model based RL agent (DreamerV3) to play Battle City on NES.\n",
+                "Тренировка world-model агента DreamerV3 для Battle City на NES.\n",
                 "\n",
-                "**Requirements:**\n",
-                "- GPU Runtime (T4 recommended)\n",
-                "- ~10GB disk space"
+                "**Runtime:** GPU (T4)"
             ],
             "metadata": {
                 "id": "header"
             }
         },
         {
-            "cell_type": "markdown",
-            "source": [
-                "## 1. Install System Dependencies"
-            ],
-            "metadata": {
-                "id": "deps_header"
-            }
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {
-                "id": "install_system"
-            },
-            "outputs": [],
-            "source": [
-                "# SDL2 for pygame/rendering (optional for headless training)\n",
-                "!apt-get update && apt-get install -y libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev freetype2-demos"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "## 2. Install Python Dependencies"
-            ],
-            "metadata": {
-                "id": "python_deps_header"
-            }
-        },
-        {
             "cell_type": "code",
             "source": [
-                "# Battle City dependencies\n",
-                "!pip install gymnasium stable-baselines3[extra] nes-py opencv-python shimmy\n",
-                "\n",
-                "# DreamerV3 dependencies\n",
-                "!pip install jax[cuda12] jaxlib portal elements ruamel.yaml cloudpickle\n",
-                "\n",
-                "# Verify JAX GPU\n",
-                "import jax\n",
-                "print(f\"JAX devices: {jax.devices()}\")"
+                "#@title 1. Установка зависимостей\n",
+                "!pip install nes-py gymnasium jax[cuda12] jaxlib ninjax elements portal ruamel.yaml cloudpickle chex -q\n",
+                "print(\"✅ Зависимости установлены\")"
             ],
             "metadata": {
-                "id": "install_python"
+                "id": "install"
             },
             "execution_count": null,
             "outputs": []
         },
         {
-            "cell_type": "markdown",
+            "cell_type": "code",
             "source": [
-                "## 3. Clone Project Repository"
+                "#@title 2. Патч nes-py (NumPy 2.0)\n",
+                "rom_path = \"/usr/local/lib/python3.12/dist-packages/nes_py/_rom.py\"\n",
+                "with open(rom_path, 'r') as f:\n",
+                "    content = f.read()\n",
+                "content = content.replace(\n",
+                "    \"return self.prg_rom_start + self.prg_rom_size * 2**10\",\n",
+                "    \"return int(self.prg_rom_start) + int(self.prg_rom_size) * 1024\"\n",
+                ")\n",
+                "content = content.replace(\n",
+                "    \"return self.chr_rom_start + self.chr_rom_size * 2**10\",\n",
+                "    \"return int(self.chr_rom_start) + int(self.chr_rom_size) * 1024\"\n",
+                ")\n",
+                "with open(rom_path, 'w') as f:\n",
+                "    f.write(content)\n",
+                "print(\"✅ nes-py патч применён\")"
             ],
             "metadata": {
-                "id": "clone_header"
-            }
+                "id": "patch_nes"
+            },
+            "execution_count": null,
+            "outputs": []
         },
         {
             "cell_type": "code",
             "source": [
-                "import os\n",
-                "\n",
-                "# Mount Google Drive for persistent checkpoints\n",
+                "#@title 3. Клонирование и патч JAX API\n",
                 "from google.colab import drive\n",
                 "drive.mount('/content/drive')\n",
                 "\n",
-                "# Clone your repository (replace with your repo URL)\n",
-                "REPO_URL = \"https://github.com/Nikolay1221/battle-city-dreamer.git\"  # <-- CHANGE THIS\n",
+                "!rm -rf /content/battle-city\n",
+                "!git clone https://github.com/Nikolay1221/battle-city-dreamer.git /content/battle-city\n",
                 "\n",
-                "if not os.path.exists('/content/battle-city'):\n",
-                "    # If you have a private repo, use SSH or token\n",
-                "    !git clone {REPO_URL} /content/battle-city\n",
-                "else:\n",
-                "    print(\"Repository already cloned\")\n",
+                "# Патч transform.py\n",
+                "transform_path = \"/content/battle-city/embodied/jax/transform.py\"\n",
+                "with open(transform_path, 'r') as f:\n",
+                "    content = f.read()\n",
+                "content = content.replace(\n",
+                "    \"fn = jax.jit(fn, arg_shardings, params_sharding, static_argnums, None)\",\n",
+                "    \"fn = jax.jit(fn, in_shardings=arg_shardings, out_shardings=params_sharding, static_argnums=static_argnums)\"\n",
+                ")\n",
+                "content = content.replace(\n",
+                "    \"fn = jax.jit(fn, in_shardings, out_shardings, static_argnums, None, donate)\",\n",
+                "    \"fn = jax.jit(fn, in_shardings=in_shardings, out_shardings=out_shardings, static_argnums=static_argnums, donate_argnums=donate)\"\n",
+                ")\n",
+                "with open(transform_path, 'w') as f:\n",
+                "    f.write(content)\n",
+                "print(\"✅ transform.py патч\")\n",
                 "\n",
-                "os.chdir('/content/battle-city')\n",
-                "!ls -la"
+                "# Патч agent.py\n",
+                "agent_path = \"/content/battle-city/embodied/jax/agent.py\"\n",
+                "with open(agent_path, 'r') as f:\n",
+                "    content = f.read()\n",
+                "content = content.replace(\n",
+                "    \"\"\"self._split = jax.jit(\n",
+                "        lambda xs: jax.tree.map(lambda x: list(x), xs),\n",
+                "        internal.local_sharding(self.policy_sharded),\n",
+                "        internal.local_sharding(self.policy_mirrored))\n",
+                "    self._stack = jax.jit(\n",
+                "        lambda xs: jax.tree.map(\n",
+                "            jnp.stack, xs, is_leaf=lambda x: isinstance(x, list)),\n",
+                "        internal.local_sharding(self.policy_mirrored),\n",
+                "        internal.local_sharding(self.policy_sharded))\"\"\",\n",
+                "    \"\"\"self._split = jax.jit(\n",
+                "        lambda xs: jax.tree.map(lambda x: list(x), xs),\n",
+                "        in_shardings=internal.local_sharding(self.policy_sharded),\n",
+                "        out_shardings=internal.local_sharding(self.policy_mirrored))\n",
+                "    self._stack = jax.jit(\n",
+                "        lambda xs: jax.tree.map(\n",
+                "            jnp.stack, xs, is_leaf=lambda x: isinstance(x, list)),\n",
+                "        in_shardings=internal.local_sharding(self.policy_mirrored),\n",
+                "        out_shardings=internal.local_sharding(self.policy_sharded))\"\"\"\n",
+                ")\n",
+                "with open(agent_path, 'w') as f:\n",
+                "    f.write(content)\n",
+                "print(\"✅ agent.py патч\")\n",
+                "\n",
+                "# Патч configs.yaml (размер 64x64)\n",
+                "configs_path = \"/content/battle-city/dreamerv3/configs.yaml\"\n",
+                "with open(configs_path, 'r') as f:\n",
+                "    content = f.read()\n",
+                "content = content.replace(\"size: [52, 52]\", \"size: [64, 64]\")\n",
+                "with open(configs_path, 'w') as f:\n",
+                "    f.write(content)\n",
+                "print(\"✅ configs.yaml 64x64\")\n",
+                "\n",
+                "# Патч battlecity.py\n",
+                "bc_path = \"/content/battle-city/embodied/envs/battlecity.py\"\n",
+                "with open(bc_path, 'r') as f:\n",
+                "    content = f.read()\n",
+                "content = content.replace(\"size=(52, 52)\", \"size=(64, 64)\")\n",
+                "# Убираем импорт nes_py_patch (патч уже применён выше)\n",
+                "content = content.replace(\"import nes_py_patch  # noqa: F401\", \"# nes_py_patch applied in notebook\")\n",
+                "with open(bc_path, 'w') as f:\n",
+                "    f.write(content)\n",
+                "print(\"✅ battlecity.py 64x64\")\n",
+                "\n",
+                "print(\"\\n🎉 Всё готово!\")"
             ],
             "metadata": {
-                "id": "clone_repo"
+                "id": "clone_patch"
             },
             "execution_count": null,
             "outputs": []
         },
         {
-            "cell_type": "markdown",
-            "source": [
-                "## 4. Verify Battle City Environment"
-            ],
-            "metadata": {
-                "id": "verify_header"
-            }
-        },
-        {
             "cell_type": "code",
             "source": [
-                "import sys\n",
-                "sys.path.insert(0, '/content/battle-city')\n",
+                "#@title 4. Проверка окружения\n",
+                "import os\n",
+                "os.chdir('/content/battle-city')\n",
                 "\n",
                 "from battle_city_env import BattleCityEnv\n",
-                "\n",
-                "# Quick test\n",
                 "env = BattleCityEnv(render_mode='rgb_array')\n",
-                "obs, info = env.reset()\n",
-                "print(f\"Observation shape: {obs.shape}\")\n",
-                "print(f\"Action space: {env.action_space}\")\n",
-                "\n",
-                "# Test step\n",
-                "obs, reward, done, truncated, info = env.step(1)  # Move up\n",
-                "print(f\"Reward: {reward}, Done: {done}\")\n",
+                "obs, _ = env.reset()\n",
+                "print(f\"Obs shape: {obs.shape}\")\n",
                 "env.close()\n",
-                "print(\"\\n✅ Battle City environment works!\")"
+                "print(\"✅ BattleCityEnv работает!\")"
             ],
             "metadata": {
-                "id": "verify_env"
+                "id": "verify"
             },
             "execution_count": null,
             "outputs": []
         },
         {
-            "cell_type": "markdown",
-            "source": [
-                "## 5. Verify DreamerV3 Environment Wrapper"
-            ],
-            "metadata": {
-                "id": "verify_dreamer_header"
-            }
-        },
-        {
             "cell_type": "code",
             "source": [
-                "from embodied.envs.battlecity import BattleCity\n",
-                "\n",
-                "env = BattleCity('stage0')\n",
-                "print(f\"Obs space: {env.obs_space}\")\n",
-                "print(f\"Act space: {env.act_space}\")\n",
-                "\n",
-                "# Test reset\n",
-                "obs = env.step({'action': 0, 'reset': True})\n",
-                "print(f\"Image shape: {obs['image'].shape}\")\n",
-                "print(f\"Is first: {obs['is_first']}\")\n",
-                "\n",
-                "env.close()\n",
-                "print(\"\\n✅ DreamerV3 wrapper works!\")"
-            ],
-            "metadata": {
-                "id": "verify_dreamer"
-            },
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "## 6. Configure Training"
-            ],
-            "metadata": {
-                "id": "config_header"
-            }
-        },
-        {
-            "cell_type": "code",
-            "source": [
-                "# Training configuration\n",
-                "LOGDIR = \"/content/drive/MyDrive/battlecity_dreamer/logs\"\n",
-                "TASK = \"battlecity_stage0\"\n",
-                "STEPS = 5_000_000\n",
-                "ENVS = 8  # Parallel environments\n",
-                "\n",
-                "# Create log directory\n",
+                "#@title 5. Запуск тренировки 🚀\n",
                 "import os\n",
+                "os.chdir('/content/battle-city')\n",
+                "\n",
+                "LOGDIR = \"/content/drive/MyDrive/battlecity_dreamer/logs\"\n",
                 "os.makedirs(LOGDIR, exist_ok=True)\n",
-                "print(f\"Logs will be saved to: {LOGDIR}\")"
-            ],
-            "metadata": {
-                "id": "config"
-            },
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "## 7. Start Training 🚀"
-            ],
-            "metadata": {
-                "id": "train_header"
-            }
-        },
-        {
-            "cell_type": "code",
-            "source": [
-                "# Run DreamerV3 training\n",
+                "\n",
                 "!python dreamerv3/main.py \\\n",
-                "    --task {TASK} \\\n",
+                "    --task battlecity_stage0 \\\n",
                 "    --configs battlecity size12m \\\n",
                 "    --logdir {LOGDIR} \\\n",
-                "    --run.steps {STEPS} \\\n",
-                "    --run.envs {ENVS} \\\n",
+                "    --run.steps 5000000 \\\n",
+                "    --run.envs 8 \\\n",
                 "    --jax.platform cuda"
             ],
             "metadata": {
@@ -240,48 +191,14 @@
             "outputs": []
         },
         {
-            "cell_type": "markdown",
-            "source": [
-                "## 8. Monitor Training (TensorBoard)"
-            ],
-            "metadata": {
-                "id": "monitor_header"
-            }
-        },
-        {
             "cell_type": "code",
             "source": [
+                "#@title 6. TensorBoard\n",
                 "%load_ext tensorboard\n",
-                "%tensorboard --logdir {LOGDIR}"
+                "%tensorboard --logdir /content/drive/MyDrive/battlecity_dreamer/logs"
             ],
             "metadata": {
                 "id": "tensorboard"
-            },
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "## 9. Evaluate Trained Agent"
-            ],
-            "metadata": {
-                "id": "eval_header"
-            }
-        },
-        {
-            "cell_type": "code",
-            "source": [
-                "# Run evaluation\n",
-                "!python dreamerv3/main.py \\\n",
-                "    --task {TASK} \\\n",
-                "    --configs battlecity size12m \\\n",
-                "    --logdir {LOGDIR} \\\n",
-                "    --script eval_only \\\n",
-                "    --run.eval_eps 10"
-            ],
-            "metadata": {
-                "id": "evaluate"
             },
             "execution_count": null,
             "outputs": []
