chore: Simplified Colab notebook

--- a/train_battlecity_dreamer.ipynb
+++ b/train_battlecity_dreamer.ipynb
@@ -17,9 +17,6 @@
             "cell_type": "markdown",
             "source": [
                 "# 🎮 Battle City + DreamerV3\n",
-                "\n",
-                "Тренировка world-model агента DreamerV3 для Battle City на NES.\n",
-                "\n",
                 "**Runtime:** GPU (T4)"
             ],
             "metadata": {
@@ -29,9 +26,17 @@
         {
             "cell_type": "code",
             "source": [
-                "#@title 1. Установка зависимостей\n",
-                "!pip install nes-py gymnasium jax[cuda12] jaxlib ninjax elements portal ruamel.yaml cloudpickle chex -q\n",
-                "print(\"✅ Зависимости установлены\")"
+                "#@title 1. Установка\n",
+                "!pip install nes-py gymnasium jax[cuda12] jaxlib ninjax elements portal ruamel.yaml chex -q\n",
+                "\n",
+                "# Патч nes-py для NumPy 2.0\n",
+                "rom_path = \"/usr/local/lib/python3.12/dist-packages/nes_py/_rom.py\"\n",
+                "with open(rom_path, 'r') as f: content = f.read()\n",
+                "content = content.replace(\"self.prg_rom_start + self.prg_rom_size * 2**10\", \"int(self.prg_rom_start) + int(self.prg_rom_size) * 1024\")\n",
+                "content = content.replace(\"self.chr_rom_start + self.chr_rom_size * 2**10\", \"int(self.chr_rom_start) + int(self.chr_rom_size) * 1024\")\n",
+                "with open(rom_path, 'w') as f: f.write(content)\n",
+                "\n",
+                "print('✅ Готово')"
             ],
             "metadata": {
                 "id": "install"
@@ -42,106 +47,16 @@
         {
             "cell_type": "code",
             "source": [
-                "#@title 2. Патч nes-py (NumPy 2.0)\n",
-                "rom_path = \"/usr/local/lib/python3.12/dist-packages/nes_py/_rom.py\"\n",
-                "with open(rom_path, 'r') as f:\n",
-                "    content = f.read()\n",
-                "content = content.replace(\n",
-                "    \"return self.prg_rom_start + self.prg_rom_size * 2**10\",\n",
-                "    \"return int(self.prg_rom_start) + int(self.prg_rom_size) * 1024\"\n",
-                ")\n",
-                "content = content.replace(\n",
-                "    \"return self.chr_rom_start + self.chr_rom_size * 2**10\",\n",
-                "    \"return int(self.chr_rom_start) + int(self.chr_rom_size) * 1024\"\n",
-                ")\n",
-                "with open(rom_path, 'w') as f:\n",
-                "    f.write(content)\n",
-                "print(\"✅ nes-py патч применён\")"
-            ],
-            "metadata": {
-                "id": "patch_nes"
-            },
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "code",
-            "source": [
-                "#@title 3. Клонирование и патч JAX API\n",
+                "#@title 2. Клонирование\n",
                 "from google.colab import drive\n",
                 "drive.mount('/content/drive')\n",
                 "\n",
                 "!rm -rf /content/battle-city\n",
                 "!git clone https://github.com/Nikolay1221/battle-city-dreamer.git /content/battle-city\n",
-                "\n",
-                "# Патч transform.py\n",
-                "transform_path = \"/content/battle-city/embodied/jax/transform.py\"\n",
-                "with open(transform_path, 'r') as f:\n",
-                "    content = f.read()\n",
-                "content = content.replace(\n",
-                "    \"fn = jax.jit(fn, arg_shardings, params_sharding, static_argnums, None)\",\n",
-                "    \"fn = jax.jit(fn, in_shardings=arg_shardings, out_shardings=params_sharding, static_argnums=static_argnums)\"\n",
-                ")\n",
-                "content = content.replace(\n",
-                "    \"fn = jax.jit(fn, in_shardings, out_shardings, static_argnums, None, donate)\",\n",
-                "    \"fn = jax.jit(fn, in_shardings=in_shardings, out_shardings=out_shardings, static_argnums=static_argnums, donate_argnums=donate)\"\n",
-                ")\n",
-                "with open(transform_path, 'w') as f:\n",
-                "    f.write(content)\n",
-                "print(\"✅ transform.py патч\")\n",
-                "\n",
-                "# Патч agent.py\n",
-                "agent_path = \"/content/battle-city/embodied/jax/agent.py\"\n",
-                "with open(agent_path, 'r') as f:\n",
-                "    content = f.read()\n",
-                "content = content.replace(\n",
-                "    \"\"\"self._split = jax.jit(\n",
-                "        lambda xs: jax.tree.map(lambda x: list(x), xs),\n",
-                "        internal.local_sharding(self.policy_sharded),\n",
-                "        internal.local_sharding(self.policy_mirrored))\n",
-                "    self._stack = jax.jit(\n",
-                "        lambda xs: jax.tree.map(\n",
-                "            jnp.stack, xs, is_leaf=lambda x: isinstance(x, list)),\n",
-                "        internal.local_sharding(self.policy_mirrored),\n",
-                "        internal.local_sharding(self.policy_sharded))\"\"\",\n",
-                "    \"\"\"self._split = jax.jit(\n",
-                "        lambda xs: jax.tree.map(lambda x: list(x), xs),\n",
-                "        in_shardings=internal.local_sharding(self.policy_sharded),\n",
-                "        out_shardings=internal.local_sharding(self.policy_mirrored))\n",
-                "    self._stack = jax.jit(\n",
-                "        lambda xs: jax.tree.map(\n",
-                "            jnp.stack, xs, is_leaf=lambda x: isinstance(x, list)),\n",
-                "        in_shardings=internal.local_sharding(self.policy_mirrored),\n",
-                "        out_shardings=internal.local_sharding(self.policy_sharded))\"\"\"\n",
-                ")\n",
-                "with open(agent_path, 'w') as f:\n",
-                "    f.write(content)\n",
-                "print(\"✅ agent.py патч\")\n",
-                "\n",
-                "# Патч configs.yaml (размер 64x64)\n",
-                "configs_path = \"/content/battle-city/dreamerv3/configs.yaml\"\n",
-                "with open(configs_path, 'r') as f:\n",
-                "    content = f.read()\n",
-                "content = content.replace(\"size: [52, 52]\", \"size: [64, 64]\")\n",
-                "with open(configs_path, 'w') as f:\n",
-                "    f.write(content)\n",
-                "print(\"✅ configs.yaml 64x64\")\n",
-                "\n",
-                "# Патч battlecity.py\n",
-                "bc_path = \"/content/battle-city/embodied/envs/battlecity.py\"\n",
-                "with open(bc_path, 'r') as f:\n",
-                "    content = f.read()\n",
-                "content = content.replace(\"size=(52, 52)\", \"size=(64, 64)\")\n",
-                "# Убираем импорт nes_py_patch (патч уже применён выше)\n",
-                "content = content.replace(\"import nes_py_patch  # noqa: F401\", \"# nes_py_patch applied in notebook\")\n",
-                "with open(bc_path, 'w') as f:\n",
-                "    f.write(content)\n",
-                "print(\"✅ battlecity.py 64x64\")\n",
-                "\n",
-                "print(\"\\n🎉 Всё готово!\")"
+                "print('✅ Готово')"
             ],
             "metadata": {
-                "id": "clone_patch"
+                "id": "clone"
             },
             "execution_count": null,
             "outputs": []
@@ -149,37 +64,15 @@
         {
             "cell_type": "code",
             "source": [
-                "#@title 4. Проверка окружения\n",
+                "#@title 3. Тренировка 🚀\n",
                 "import os\n",
                 "os.chdir('/content/battle-city')\n",
-                "\n",
-                "from battle_city_env import BattleCityEnv\n",
-                "env = BattleCityEnv(render_mode='rgb_array')\n",
-                "obs, _ = env.reset()\n",
-                "print(f\"Obs shape: {obs.shape}\")\n",
-                "env.close()\n",
-                "print(\"✅ BattleCityEnv работает!\")"
-            ],
-            "metadata": {
-                "id": "verify"
-            },
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "code",
-            "source": [
-                "#@title 5. Запуск тренировки 🚀\n",
-                "import os\n",
-                "os.chdir('/content/battle-city')\n",
-                "\n",
-                "LOGDIR = \"/content/drive/MyDrive/battlecity_dreamer/logs\"\n",
-                "os.makedirs(LOGDIR, exist_ok=True)\n",
+                "os.makedirs('/content/drive/MyDrive/battlecity_dreamer/logs', exist_ok=True)\n",
                 "\n",
                 "!python dreamerv3/main.py \\\n",
                 "    --task battlecity_stage0 \\\n",
                 "    --configs battlecity size12m \\\n",
-                "    --logdir {LOGDIR} \\\n",
+                "    --logdir /content/drive/MyDrive/battlecity_dreamer/logs \\\n",
                 "    --run.steps 5000000 \\\n",
                 "    --run.envs 8 \\\n",
                 "    --jax.platform cuda"
@@ -193,12 +86,12 @@
         {
             "cell_type": "code",
             "source": [
-                "#@title 6. TensorBoard\n",
+                "#@title 4. TensorBoard\n",
                 "%load_ext tensorboard\n",
                 "%tensorboard --logdir /content/drive/MyDrive/battlecity_dreamer/logs"
             ],
             "metadata": {
-                "id": "tensorboard"
+                "id": "tb"
             },
             "execution_count": null,
             "outputs": []
